Add roofline to openapi
