# src/backend/restapi/api/openapi.yml
@@ -546,7 +546,7 @@ paths:
         - oauth2:
             - benchmarks_r
   /measurements/{jobId}/json:
-   get:
+    get:
       operationId: backend.restapi.api.measurements.export_json
       parameters:
         - $ref: "#/components/parameters/JobId"
@@ -579,7 +579,7 @@ paths:
         - oauth2:
             - benchmarks_r
   /measurements/{jobId}/csv:
-   get:
+    get:
       operationId: backend.restapi.api.measurements.export_csv
       parameters:
         - $ref: "#/components/parameters/JobId"
@@ -609,7 +609,7 @@ paths:
         - oauth2:
             - benchmarks_r
   /measurements/{jobId}/energy:
-   get:
+    get:
       operationId: backend.restapi.api.measurements.calculate_energy
       parameters:
         - $ref: "#/components/parameters/JobId"
@@ -649,6 +649,24 @@ paths:
             application/json:
               schema:
                 type: object
+      security:
+        - oauth2:
+            - benchmarks_r
+  /metrics/roofline:
+    get:
+      operationId: backend.restapi.api.measurements.get_roofline
+      parameters:
+        - $ref: "#/components/parameters/JobIdsQuery"
+      tags:
+        - measurements
+      summary: Roofline model
+      responses:
+        "200":
+          description: Successfully obtained roofline model data
+          content:
+              application/json:
+                schema:
+                  type: object
       security:
         - oauth2:
             - benchmarks_r
